MIET-154 : Create API Endpoint
